// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Farm can be viewed as entries 1`] = `
Array [
  Array [
    "pig",
    Object {
      "img": "🐖",
      "type": "animal",
    },
  ],
  Array [
    "cow",
    Object {
      "img": "🐄",
      "type": "animal",
    },
  ],
  Array [
    "tractor",
    Object {
      "img": "🚜",
      "type": "building",
    },
  ],
  Array [
    "farmer",
    Object {
      "img": "👩‍🌾",
      "type": "human",
    },
  ],
]
`;

exports[`Farm groups by type 1`] = `
Object {
  "animal": Array [
    Object {
      "img": "🐖",
      "name": "pig",
      "type": "animal",
    },
    Object {
      "img": "🐄",
      "name": "cow",
      "type": "animal",
    },
  ],
  "building": Array [
    Object {
      "img": "🚜",
      "name": "tractor",
      "type": "building",
    },
  ],
  "human": Array [
    Object {
      "img": "👩‍🌾",
      "name": "farmer",
      "type": "human",
    },
  ],
}
`;
